--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <div class="project-img"></div>
+                <div class="mrmason.png"></div>
                 <div class="project-info">
                     <h3>MrMason - HRMS Platform</h3>
                     <div class="project-date">January 2024 - June 2024</div>
@@ -713,7 +713,7 @@
             </div>
 
             <div class="project-card">
-                <div class="project-img"></div>
+                <div class="ar.jpeg"></div>
                 <div class="project-info">
                     <h3>AR Annotation Project</h3>
                     <div class="project-date">September 2024 - January 2026</div>
