--- a/index.html
+++ b/index.html
@@ -696,36 +696,45 @@
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-        <div class="projects-grid">
-            <div class="project-card">
-                <div class="mrmason.png"></div>
-                <div class="project-info">
-                    <h3>MrMason - HRMS Platform</h3>
-                    <div class="project-date">January 2024 - June 2024</div>
-                    <p>Developed and optimized modules for user authentication, dashboard views, and customer data handling using Java and Spring Boot. Designed and implemented RESTful APIs for secure data exchange and system integration.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">Java</span>
-                        <span class="tech-tag">Spring Boot</span>
-                        <span class="tech-tag">REST APIs</span>
-                        <span class="tech-tag">MySQL</span>
-                    </div>
-                </div>
-            </div>
+        <!-- MrMason Project Card - Fix this section -->
+<div class="project-card">
+    <div class="project-img">
+        <img src="https://raw.githubusercontent.com/udayskiran/Portfolio/main/mrmason.png" 
+             alt="MrMason HRMS Platform" 
+             class="project-image">
+    </div>
+    <div class="project-info">
+        <h3>MrMason - HRMS Platform</h3>
+        <div class="project-date">January 2024 - June 2024</div>
+        <p>Developed and optimized modules for user authentication, dashboard views, and customer data handling using Java and Spring Boot. Designed and implemented RESTful APIs for secure data exchange and system integration.</p>
+        <div class="project-tech">
+            <span class="tech-tag">Java</span>
+            <span class="tech-tag">Spring Boot</span>
+            <span class="tech-tag">REST APIs</span>
+            <span class="tech-tag">MySQL</span>
+        </div>
+    </div>
+</div>
 
-            <div class="project-card">
-                <div class="ar.jpeg"></div>
-                <div class="project-info">
-                    <h3>AR Annotation Project</h3>
-                    <div class="project-date">September 2024 - January 2026</div>
-                    <p>Working on AR technology enabling users to annotate real-world environments. Using internal tools to tag objects, define bounding boxes, and map 3D coordinates for spatial recognition.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">AR Technology</span>
-                        <span class="tech-tag">3D Mapping</span>
-                        <span class="tech-tag">Data Quality</span>
-                        <span class="tech-tag">AI Labels</span>
-                    </div>
-                </div>
-            </div>
+<!-- AR Project Card - Fix this section -->
+<div class="project-card">
+    <div class="project-img">
+        <img src="https://raw.githubusercontent.com/udayskiran/Portfolio/main/ar.jpeg" 
+             alt="AR Annotation Project" 
+             class="project-image">
+    </div>
+    <div class="project-info">
+        <h3>AR Annotation Project</h3>
+        <div class="project-date">September 2024 - January 2026</div>
+        <p>Working on AR technology enabling users to annotate real-world environments. Using internal tools to tag objects, define bounding boxes, and map 3D coordinates for spatial recognition.</p>
+        <div class="project-tech">
+            <span class="tech-tag">AR Technology</span>
+            <span class="tech-tag">3D Mapping</span>
+            <span class="tech-tag">Data Quality</span>
+            <span class="tech-tag">AI Labels</span>
+        </div>
+    </div>
+</div>
         </div>
 
         <!-- GitHub Repo Auto Cards -->
