--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
         <div class="about-content">
             <p>Detail-oriented Java Backend Developer with strong expertise in creating scalable and efficient solutions. Proficient in Java, Spring frameworks, and database management, with a proven track record of optimizing system functionalities and leading project implementations.</p>
             
-            <p>Worked as an Analyst at GlobalLogic Technologies, where I focus on technical accuracy in AI responses and AR spatial recognition. Previously completed an internship at Kosuri Softlabs, developing RESTful APIs and user authentication modules.</p>
+            <p>Worked as an Analyst at GlobalLogic Technologies, where I focused on technical accuracy in AI responses and AR spatial recognition. Previously completed an internship at Kosuri Softlabs, developing RESTful APIs and user authentication modules.</p>
             
             <div class="extra-info">
                 <p><strong>Extra Information about me:</strong> Microsoft Certified: Azure AI Fundamentals. Completed Full Stack Java certification. Fluent in Telugu, English, and Hindi. When not coding, I enjoy exploring new technologies and solving complex problems.</p>
