--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
             </div>
             <div class="contact-item">
                 <i class="fas fa-phone"></i>
-                <span>+919390431131</span>
+                <span>+91 9390431131</span>
             </div>
             <div class="contact-item">
                 <i class="fas fa-map-marker-alt"></i>
